[project]
name = "okf-compiler"
version = "0.2.0"
description = "Compile Markdown articles into isolated, self-contained OKF Bundles."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "FFFFFFpy"}]
keywords = ["okf", "knowledge", "markdown", "rag", "compiler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
  "litellm>=1.50",
  "json-repair>=0.30",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
okf = "okf_compiler.cli:main"
okf-compiler = "okf_compiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okf_compiler"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
